# MCP

./: .gitignore  .npmignore  README_MCP.md  main.ts  manifest.json  package.json  pnpm-lock.yaml  readme.md  test-pending-payments.js  test.json  tsconfig.json
auth/: upnifyAuth.ts
handlers/: opportunities.ts  prospects.ts  reports.ts  utilities.ts
python-package/: .gitignore  LICENSE  README.md  pyproject.toml  test_server.py
python-package/src/upnify_mcp_server/: __init__.py  auth.py  constants.py  main.py  prospects.py
types/: interfaces.ts
utils/: constants.ts  validators.ts
